// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownItem /> render() When in dark mode Should have a dark class 1`] = `
<div
  className="DropdownMenu__item DropdownMenu__item--dark DropdownMenu__item--disabled"
  onClick={[Function]}
>
  Preferences
</div>
`;

exports[`<DropdownItem /> render() When there is no handler Should have a disabled class 1`] = `
<div
  className="DropdownMenu__item DropdownMenu__item--disabled"
  onClick={[Function]}
>
  Move Left
</div>
`;
